--- a/Havvka_mobile/app/src/main/res/values/strings.xml
+++ b/Havvka_mobile/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
-    <string name="app_name">Havvka_mobile</string>
+    <string name="app_name">Havvka mobile</string>
+    <string name="Sign_in">Увійти</string>
+    <string name="Register">Зареєструватись</string>
+    <string name="Sign_in_guest">Увійти як гість</string>
 </resources>
